# Verifier

./: README  README.md  config.h.in~  configure.ac
Includes/Protocols/: ABP.xml  ABP_F.xml  BAwCC.xml  BRP.xml  BRP_F.xml  Jingle.xml  STP.xml  Sam.xml  SlidingWindow_F.xml  Synchronous_F.xml
docs/LICENSE/: license.txt
docs/manual/: Makefile  biblio.bib  manual.aux  manual.bbl  manual.blg  manual.out  manual.tex  manual.tex~  manual.toc
src/: Makefile.am  Settings.txt  Settings.txt~  automata_using_lemon.hpp  constraints_generation.hpp  engine.cpp  main_header.hpp  xml2automata.hpp
src/.deps/: engine.Po  pugixml.Po
verifier_result/Result/: main.tex
